[package]
name = "hypersonic"
version = "0.1.0"
edition = "2021"

[dependencies]
symphonia = { features = ["aac", "mpa", "isomp4", "alac", "vorbis"], version = "0.5" }
tokio = { features = ["macros", "rt-multi-thread", "sync"], version = "1" }
tracing-subscriber = "0.3"
twilight-gateway = "0.16"
twilight-model = "0.16"
twilight-http = "0.16"
tracing = "0.1"
vss = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3.31"
rand = "0.9.1"
thiserror = "2.0.12"
valk-utils = "0.1.2"

[dependencies.songbird]
default-features = false
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["driver", "gateway", "twilight", "rustls", "tws"]
